added docker file